Migrate to React

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
-node_modules
-*.log*
-.nuxt
-.nitro
-.cache
-.output
-.env
-dist
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# 临时文件 #
-######################
-tmp/
-.tmp/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# 系统生成文件 #
-######################
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
 .DS_Store?
 .AppleDouble
@@ -27,9 +29,26 @@ Thumbs.db
 .fseventsd
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
+*.pem
 
-# IDE 和编辑器 #
-######################
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# editor & ides
 .idea/
 /go_build_*
 out/
