--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
+  "name": "meguri-react",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@arco-design/web-vue": "^2.40.1",
-    "@nuxtjs/i18n": "^8.0.0-beta.7",
-    "less": "^4.1.3",
-    "nuxt": "3.0.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@arco-themes/vue-mengtu": "^0.0.2"
+    "@arco-design/web-react": "^2.43.0",
+    "@arco-themes/react-mengtu": "^0.0.1",
+    "@next/font": "13.1.1",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
+    "i18next": "^22.4.6",
+    "next": "13.1.1",
+    "next-i18next": "^13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^12.1.1",
+    "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
