--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "meguri-react",
-  "version": "0.1.0",
+  "name": "meguri",
   "private": true,
   "scripts": {
     "dev": "next dev",
